# php-ext-mmap

./: .gitignore  CMakeLists.txt  README.md  config.m4  config.w32  kjmmap.c  kjmmap.dep  kjmmap.stub.php  kjmmap_arginfo.h  php_kjmmap.h  test.php
tests/: 001.phpt  002.phpt  003.phpt
